added first angular service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
   <span>Welcome</span>
   <span style="margin-left: 50px;" (click)="onRegister()">Register</span>
   <span style="margin-left: 50px;" (click)="onAbout()">About</span>
+  <span style="margin-left: 50px;" (click)="newPage()">Поменять на вкус названия</span>
 </div>
 
 <!-- Dynamic Part -->
